# hilite

./: .gitignore  .ocamlformat-ignore  CHANGES.md  LICENSE.md  README.md  dune  dune-project  highlight.opam  hilite-cli.opam  hilite.opam  hilite.opam.template
.github/workflows/: test.yml
doc/: prelude.ml
lib/: dune  hilite.ml  jsons.ml  md.ml  md.mli  syntax.ml  syntax.mli
lib/syntaxes/: README.md
pp/: dune
src/: dune  hilite.ml  hilite.mli  jsons.ml  md.ml  md.mli  syntax.ml  syntax.mli
src/markdown/: dune  highlight_markdown.ml  highlight_markdown.mli  hilite_markdown.ml  hilite_markdown.mli
src/pp/: pp.ml
src/syntaxes/: README.md  diff.json  ocaml.json  shell.json
test/: dune  prelude.ml  test.md  test_diff.md  test_md.expected  test_md.ml  test_md_html.expected  test_md_html.ml  test_md_syntax.expected  test_md_syntax.ml
test/lib/: dune  test.ml  test_md.ml  test_md.mli
