(library
 (name hilite)
 (public_name hilite)
 (libraries core textmate-language omd markup plist-xml tyxml fmt fmt.tty)
 (preprocess
  (pps tyxml-ppx)))

(data_only_dirs syntaxes)

(rule
 (mode promote)
 (target plists.ml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let ocaml = {|")
    (cat %{project_root}/lib/syntaxes/ocaml.plist)
    (echo "|}\n\n")
    (echo "let dune = {|")
    (cat %{project_root}/lib/syntaxes/dune.plist)
    (echo "|}\n\n")
    (echo "let opam = {|")
    (cat %{project_root}/lib/syntaxes/opam.plist)
    (echo "|}\n\n")))))
