(library
 (name hilite)
 (public_name hilite)
 (libraries textmate-language omd yojson))

(data_only_dirs syntaxes)

(rule
 (mode promote)
 (target jsons.ml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let ocaml =\n  {|")
    (cat ./syntaxes/ocaml.json)
    (echo "|}\n\n")
    (echo "let dune =\n  {|")
    (cat ./syntaxes/dune.json)
    (echo "|}\n\n")
    (echo "let shell =\n  {|")
    (cat ./syntaxes/shell.json)
    (echo "|}\n\n")
    (echo "let opam =\n  {|")
    (cat ./syntaxes/opam.json)
    (echo "|}\n")))))
