(library
 (name hilite)
 (public_name hilite)
 (libraries textmate-language cmarkit))

(data_only_dirs syntaxes)

; (rule
;  (mode promote)
;  (target jsons.ml)
;  (deps
;   syntaxes/ocaml.interface.json
;   syntaxes/ocaml.json
;   syntaxes/dune.json
;   syntaxes/shell.json
;   syntaxes/opam.json)
;  (action
;   (with-stdout-to
;    %{target}
;    (progn
;     (echo "let ocaml_interface =\n")
;     (run ./../pp/pp.exe syntaxes/ocaml.interface.json)
;     (echo "\n\n")
;     (echo "let ocaml =\n")
;     (run ./../pp/pp.exe syntaxes/ocaml.json)
;     (echo "\n\n")
;     (echo "let dune =\n")
;     (run ./../pp/pp.exe syntaxes/dune.json)
;     (echo "\n\n")
;     (echo "let shell =\n")
;     (run ./../pp/pp.exe syntaxes/shell.json)
;     (echo "\n\n")
;     (echo "let opam =\n")
;     (run ./../pp/pp.exe syntaxes/opam.json)
;     (echo "\n\n")
;     (echo "let diff =\n")
;     (run ./../pp/pp.exe ./syntaxes/diff.json)
;     (echo "\n")))))
